refs #59 rework auth API endpoints
